[package]
name = "rust-ffi-c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.0.83"

[build-dependencies]
cc = "1.0"

# FIXME: how do we add a build step?
[[example]]
name = "build"
path = "build.rs"
